[Section] Fix border not visible in windows machines

--- a/app/assets/stylesheets/layout/_fullscreen-media-list.scss
+++ b/app/assets/stylesheets/layout/_fullscreen-media-list.scss
@@ -90,4 +90,8 @@
       }
     }
   }
+
+  .col-4 {
+    padding: 0 2px;
+  }
 }
